--- a/Geom_File.ipynb
+++ b/Geom_File.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "#We now want to generate an array of random y ordinates within this shape\n",
+    "#We now want to generate an array of random coordinates and append all of the points that are at grain boundaries\n",
     "random_points = np.random.random_integers(0,len(boundary_coordinates),128)\n",
     "\n",
     "selected_points = []\n",
