--- a/Geom_File-Copy1.ipynb
+++ b/Geom_File-Copy1.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "for yidx, y_vals in enumerate(num_total):\n",
     "    for xidx, x_vals in enumerate(y_vals):\n",
-    "        if x_vals > 4:\n",
+    "        if x_vals >= 4:\n",
     "            triple_junct.append([xidx, yidx])\n",
     "            \n",
     "\n",
